vagrant/ops/charts/jenkins/istio.yaml
#Gateway
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: jenkins-gw
  namespace: jenkins
spec:
  servers:
    - hosts:
        - jenkins.ops.cluster.yanychoi.site
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: jenkins-tls
        mode: SIMPLE
    - hosts:
        - jenkins.ops.cluster.yanychoi.site
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    app: istio-ingressgateway
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jenkins-vs
  namespace: jenkins
spec:
  hosts:
  - jenkins.ops.cluster.yanychoi.site
  gateways:
  - jenkins-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: jenkins
